tests/lustre/typechecking/shouldFail/test_shadowing.lus
const c = true;

node n(x:int) returns (y:int); -- should fail as c has a name clash 
var c:int;
let
y = x + c + 1; 
c = pre x;
tel.